--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic-Tac-Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,59 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+
+    <nav>
+      <form id='sign-up'>
+              <fieldset>
+                <legend>Sign-Up!</legend>
+                <input name="credentials[email]" type='email' placeholder='email' />
+                <input name="credentials[password]" type ='password' placeholder='password' />
+                <input name="credentials[password_confirmation]" type ='password' placeholder='password confirmation' />
+                <input type='submit' value='Sign-Up!' />
+              </fieldset>
+            </form>
+
+            <form id='sign-in'>
+              <fieldset>
+                <legend>Sign-in!</legend>
+                <input name="credentials[email]" type='email' placeholder='email' />
+                <input name="credentials[password]" type ='password' placeholder='password' />
+                <input type='submit' value='Sign-in!' />
+              </fieldset>
+            </form>
+
+            <form id='change-password'>
+              <fieldset>
+                <legend>Change Password</legend>
+                <input name="passwords[old]" type='password' placeholder='Old Password' />
+                <input name="passwords[new]" type ='password' placeholder='New Password' />
+                <input type='submit' value='Change Password!' />
+              </fieldset>
+            </form>
+
+            <form id='sign-out'>
+              <fieldset>
+                <legend>Sign Out!</legend>
+                <input type='submit' value='Sign Out!' />
+              </fieldset>
+            </form>
+    </nav>
+
+      <div class="container">
+            <div class="row">
+              <div class="col-4 box" id="box0">0</div>
+              <div class="col-4 box" id="box1">1</div>
+              <div class="col-4 box" id="box2">2</div>
+
+              <div class="col-4 box" id="box3">3</div>
+              <div class="col-4 box" id="box4">4</div>
+              <div class="col-4 box" id="box5">5</div>
+
+              <div class="col-4 box" id="box6">6</div>
+              <div class="col-4 box" id="box7">7</div>
+              <div class="col-4 box" id="box8">8</div>
+            </div>
+          </div>
+ <p id="message"></p>
     </body>
 </html>
