--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,24 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+
+        <p class="player"></p>
+        <p class="message"></p>
+
+      <div class="container">
+            <div class="row">
+              <div class="col-4 box" id="box0">0</div>
+              <div class="col-4 box" id="box1">1</div>
+              <div class="col-4 box" id="box2">2</div>
+
+              <div class="col-4 box" id="box3">3</div>
+              <div class="col-4 box" id="box4">4</div>
+              <div class="col-4 box" id="box5">5</div>
+
+              <div class="col-4 box" id="box6">6</div>
+              <div class="col-4 box" id="box7">7</div>
+              <div class="col-4 box" id="box8">8</div>
+            </div>
+          </div>
     </body>
 </html>
