Remove temporary board+added placeholder board
needs styling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <form id='sign-up'>
               <fieldset>
                 <legend>Sign-Up!</legend>
-                <input name="credentials[email]" type='email' placeholder='email' />
-                <input name="credentials[password]" type ='password' placeholder='password' />
-                <input name="credentials[password_confirmation]" type ='password' placeholder='password confirmation' />
+                <input class="field" name="credentials[email]" type='email' placeholder='email' />
+                <input class="field" name="credentials[password]" type ='password' placeholder='password' />
+                <input class="field" name="credentials[password_confirmation]" type ='password' placeholder='password confirmation' />
                 <input type='submit' value='Sign-Up!' />
               </fieldset>
             </form>
@@ -27,8 +27,8 @@
             <form id='sign-in'>
               <fieldset>
                 <legend>Sign-in!</legend>
-                <input name="credentials[email]" type='email' placeholder='email' />
-                <input name="credentials[password]" type ='password' placeholder='password' />
+                <input class="field" name="credentials[email]" type='email' placeholder='email' />
+                <input class="field" name="credentials[password]" type ='password' placeholder='password' />
                 <input type='submit' value='Sign-in!' />
               </fieldset>
             </form>
@@ -36,8 +36,8 @@
             <form id='change-password'>
               <fieldset>
                 <legend>Change Password</legend>
-                <input name="passwords[old]" type='password' placeholder='Old Password' />
-                <input name="passwords[new]" type ='password' placeholder='New Password' />
+                <input class="field" name="passwords[old]" type='password' placeholder='Old Password' />
+                <input class="field" name="passwords[new]" type ='password' placeholder='New Password' />
                 <input type='submit' value='Change Password!' />
               </fieldset>
             </form>
@@ -49,22 +49,8 @@
               </fieldset>
             </form>
     </nav>
-
-      <div class="container">
-            <div class="row">
-              <div class="col-4 box" id="box0">0</div>
-              <div class="col-4 box" id="box1">1</div>
-              <div class="col-4 box" id="box2">2</div>
-
-              <div class="col-4 box" id="box3">3</div>
-              <div class="col-4 box" id="box4">4</div>
-              <div class="col-4 box" id="box5">5</div>
-
-              <div class="col-4 box" id="box6">6</div>
-              <div class="col-4 box" id="box7">7</div>
-              <div class="col-4 box" id="box8">8</div>
-            </div>
-          </div>
  <p id="message"></p>
+ <p id="temp"> <a href="https://www.google.com/search?q=tic+tac+toe&oq=tic+tac+toe&aqs=chrome..69i57j0l4j69i60l3.2852j1j4&sourceid=chrome&ie=UTF-8" target="_blank">
+   Temporary Inferior Version</a></p>
     </body>
 </html>
