--- a/index.html
+++ b/index.html
@@ -48,14 +48,23 @@
                 <input type='submit' value='Sign Out!' />
               </fieldset>
             </form>
+
     </nav>
  <p id="message"></p>
  <p id="temp"> <a href="https://www.google.com/search?q=tic+tac+toe&oq=tic+tac+toe&aqs=chrome..69i57j0l4j69i60l3.2852j1j4&sourceid=chrome&ie=UTF-8" target="_blank">
    Temporary Inferior Version</a></p>
+
+   <form id='new-game'>
+     <fieldset>
+       <input type='submit' value='New Game!' />
+     </fieldset>
+   </form>
+
+      <div class="container board">
+
         <p class="player"></p>
         <p class="message"></p>
 
-      <div class="container">
             <div class="row">
               <div class="col-4 box" id="box0">0</div>
               <div class="col-4 box" id="box1">1</div>
