--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
         <p class="message"></p>
 
             <div class="row">
-              <div class="col-4 box" id="box0">0</div>
-              <div class="col-4 box" id="box1">1</div>
-              <div class="col-4 box" id="box2">2</div>
+              <div class="col-4 box" id="box0"></div>
+              <div class="col-4 box" id="box1"></div>
+              <div class="col-4 box" id="box2"></div>
 
-              <div class="col-4 box" id="box3">3</div>
-              <div class="col-4 box" id="box4">4</div>
-              <div class="col-4 box" id="box5">5</div>
+              <div class="col-4 box" id="box3"></div>
+              <div class="col-4 box" id="box4"></div>
+              <div class="col-4 box" id="box5"></div>
 
-              <div class="col-4 box" id="box6">6</div>
-              <div class="col-4 box" id="box7">7</div>
-              <div class="col-4 box" id="box8">8</div>
+              <div class="col-4 box" id="box6"></div>
+              <div class="col-4 box" id="box7"></div>
+              <div class="col-4 box" id="box8"></div>
             </div>
           </div>
     </body>
