--- a/index.html
+++ b/index.html
@@ -60,23 +60,29 @@
      </fieldset>
    </form>
 
+   <form id='show-game'>
+     <fieldset>
+       <input type='submit' value='Games Played!' />
+     </fieldset>
+   </form>
+
       <div class="container board">
 
         <p class="player"></p>
         <p class="message"></p>
 
-            <div class="row">
-              <div class="col-4 box" id="box0"></div>
-              <div class="col-4 box" id="box1"></div>
-              <div class="col-4 box" id="box2"></div>
+            <div class="row" id="gameSpace">
+              <div class="col-4 box" data-cell-index='0' id="box0"></div>
+              <div class="col-4 box" data-cell-index='1' id="box1"></div>
+              <div class="col-4 box" data-cell-index='2' id="box2"></div>
 
-              <div class="col-4 box" id="box3"></div>
-              <div class="col-4 box" id="box4"></div>
-              <div class="col-4 box" id="box5"></div>
+              <div class="col-4 box" data-cell-index='3' id="box3"></div>
+              <div class="col-4 box" data-cell-index='4' id="box4"></div>
+              <div class="col-4 box" data-cell-index='5' id="box5"></div>
 
-              <div class="col-4 box" id="box6"></div>
-              <div class="col-4 box" id="box7"></div>
-              <div class="col-4 box" id="box8"></div>
+              <div class="col-4 box" data-cell-index='6' id="box6"></div>
+              <div class="col-4 box" data-cell-index='7' id="box7"></div>
+              <div class="col-4 box" data-cell-index='8' id="box8"></div>
             </div>
           </div>
     </body>
