Added in API patch and show game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </form>
 
     </nav>
- <p id="message"></p>
+ <p id="main-message"></p>
  <p id="temp"> <a href="https://www.google.com/search?q=tic+tac+toe&oq=tic+tac+toe&aqs=chrome..69i57j0l4j69i60l3.2852j1j4&sourceid=chrome&ie=UTF-8" target="_blank">
    Temporary Inferior Version</a></p>
 
