--- a/index.html
+++ b/index.html
@@ -85,18 +85,22 @@
       <p class="player"></p>
       <p class="message"></p>
 
-      <div class="row" id="gameSpace">
-        <div class="col-4 box" data-cell-index='0' id="box0"></div>
-        <div class="col-4 box" data-cell-index='1' id="box1"></div>
-        <div class="col-4 box" data-cell-index='2' id="box2"></div>
-
-        <div class="col-4 box" data-cell-index='3' id="box3"></div>
-        <div class="col-4 box" data-cell-index='4' id="box4"></div>
-        <div class="col-4 box" data-cell-index='5' id="box5"></div>
-
-        <div class="col-4 box" data-cell-index='6' id="box6"></div>
-        <div class="col-4 box" data-cell-index='7' id="box7"></div>
-        <div class="col-4 box" data-cell-index='8' id="box8"></div>
+      <div class="container" id="gameSpace">
+        <div class="row">
+          <div class="col-4 box" data-cell-index='0' id="box0"></div>
+          <div class="col-4 box" data-cell-index='1' id="box1"></div>
+          <div class="col-4 box" data-cell-index='2' id="box2"></div>
+        </div>
+        <div class="row">
+          <div class="col-4 box" data-cell-index='3' id="box3"></div>
+          <div class="col-4 box" data-cell-index='4' id="box4"></div>
+          <div class="col-4 box" data-cell-index='5' id="box5"></div>
+        </div>
+        <div class="row">
+          <div class="col-4 box" data-cell-index='6' id="box6"></div>
+          <div class="col-4 box" data-cell-index='7' id="box7"></div>
+          <div class="col-4 box" data-cell-index='8' id="box8"></div>
+        </div>
       </div>
     </div>
 
