Separated auth+game code, update + forms adjusted
Auth code and Game code in their own folder and files
Move was not updating due to API Changes, now fixed
Sign-in and sign up no longer inline

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <form id='sign-up'>
         <h3>Sign-Up</h3>
-        <div class="form-inline">
+        <div class>
           <label>Email address:</label>
           <input type="email" class="form-control mb-2 mr-sm-2" name="credentials[email]" placeholder='E-mail'>
           <label>Password:</label>
@@ -39,7 +39,7 @@
 
       <form id='sign-in'>
         <h3>Sign-In</h3>
-        <div class="form-inline">
+        <div class>
           <label>Email address:</label>
           <input type="email" class="form-control mb-2 mr-sm-2" name="credentials[email]" placeholder='E-mail'>
           <label>Password:</label>
